--- a/cocowx/project.config.json
+++ b/cocowx/project.config.json
@@ -27,7 +27,7 @@
 					"id": 0,
 					"name": "首页",
 					"pathName": "pages/index/index",
-					"query": "",
+					"query": "appEncrypt=bGpNUHA5MTNkWGYzMWJBNWcxMjI5",
 					"scene": "1001"
 				},
 				{
