1.创建一个git提交时忽略文件的配置文件\n 2.更新cocowx文件夹下的文件

--- a/cocowx/project.config.json
+++ b/cocowx/project.config.json
@@ -27,7 +27,7 @@
 					"id": 0,
 					"name": "首页",
 					"pathName": "pages/index/index",
-					"query": "appEncrypt=bGpNUHA5MTNkWGYzMWJBNWcxMjI5",
+					"query": "",
 					"scene": "1001"
 				},
 				{
