1.下拉刷新；2.精选专题；3.新增一个footBar模块;4.其他bug修复

--- a/cocowx/project.config.json
+++ b/cocowx/project.config.json
@@ -27,7 +27,7 @@
 					"id": 0,
 					"name": "首页",
 					"pathName": "pages/index/index",
-					"query": "",
+					"query": "appEncrypt=bGpNUHA5MTNkWGYzMWJBNWcxMjM0",
 					"scene": "1001"
 				},
 				{
