--- a/cocowx/app.json
+++ b/cocowx/app.json
@@ -16,7 +16,7 @@
   "window": {
     "backgroundTextStyle": "white",
     "navigationBarBackgroundColor": "#ffffff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "西柚集",
     "backgroundColor": "#f1f1f1",
     "navigationBarTextStyle": "black"
   },
